# whisper-asr-webservice

./: Dockerfile  Dockerfile.gpu  docker-compose.yml  pyproject.toml  restart.sh
app/: webservice.py
